[package]
name = "foa"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = "0.6.0"
embassy-executor = { version = "0.6.1", features = ["task-arena-size-32768"] }
embassy-net-driver-channel = "0.3.0"
embassy-time = "0.3.2"

esp-hal = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal", features = ["esp32"] }
esp-alloc = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-alloc" }
esp-hal-embassy = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-hal-embassy", features = [
    "esp32",
] }
esp-backtrace = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "println",
] }
esp-println = { git = "https://github.com/esp32-open-mac/esp-hal", package = "esp-println", features = ["log"] }
esp32-wifi-hal-rs = { git = "https://github.com/esp32-open-mac/esp32-wifi-hal-rs", features = ["log"] }

log = "0.4.22"
heapless = "0.8.0"
static_cell = "2.1.0"


ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" } 
ethernet = { git = "https://github.com/Frostie314159/ethernet", default-features = false }
ether-type = "0.1.3"
llc = { git = "https://github.com/Frostie314159/llc-rs" }
critical-section = "1.2.0"
embassy-futures = "0.1.1"
rand_core = "0.6.4"
embassy-net = { version = "0.5.0", features = ["proto-ipv4", "dhcpv4", "medium-ethernet", "proto-ipv6", "tcp", "udp", "dns"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["lmac_access"]
lmac_access = []

