[package]
name = "examples"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = "1.0.0-beta.0"
esp-hal-embassy = "0.7.0"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", features = [] }
esp-backtrace = { version = "0.15.0", features = [
    "panic-handler",
    "defmt"
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "critical-section", "uart"], default-features = false }

embassy-net = { version = "0.6.0", features = ["proto-ipv4", "dhcpv4", "medium-ethernet", "proto-ipv6", "tcp", "udp", "dns", "defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

foa = { path = "../foa", features = ["defmt"] }
foa_sta = { path = "../foa_sta", features = ["defmt"] }
foa_awdl = { path = "../foa_awdl", features = ["defmt"] }

static_cell = "2.1.0"
heapless = "0.8.0"
reqwless = { git = "https://github.com/drogue-iot/reqwless.git", default-features = false }
embedded-io-async = "0.6.1"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "defmt"] }

defmt = "0.3.10"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-backtrace/esp32", "foa/esp32"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-println/esp32s2", "esp-backtrace/esp32s2", "foa/esp32s2"]
