[package]
name = "foa"
version = "0.1.0-alpha.0"
edition = "2021"

[dependencies]
embassy-sync = "0.7.0"
embassy-futures = "0.1.1"

esp-hal = "1.0.0-beta.1"
esp-wifi-hal = "0.1.2"
static_cell = "2.1.0"
critical-section = "1.2.0"
portable-atomic = "1.10.0"
esp-config = "0.4.0"
defmt-or-log = { version = "0.2.1", default-features = false }
defmt = { version = "1.0.1", optional = true }
embassy-time = "0.4.0"
ieee80211 = { version = "0.5.6", default-features = false }
heapless = "0.8.0"

[build-dependencies]
esp-config = { version = "0.4.0", features = ["build"] }

[features]
arc_buffers = []

log = ["defmt-or-log/log", "esp-wifi-hal/log"]
defmt = ["dep:defmt", "defmt-or-log/defmt", "esp-wifi-hal/defmt"]

esp32 = ["esp-hal/esp32", "esp-wifi-hal/esp32"]
esp32s2 = ["esp-hal/esp32s2", "esp-wifi-hal/esp32s2"]
