[package]
name = "foa"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"

esp-hal = "1.0.0"
esp-wifi-hal = "0.1.6"
static_cell = "2.1.1"
critical-section = "1.2.0"
portable-atomic = "1.11.1"
esp-config = "0.6.0"
defmt-or-log = { version = "0.2.2", default-features = false }
defmt = { version = "1.0.1", optional = true }
embassy-time = "0.5.0"
heapless = "0.9.1"
ieee80211 = "0.5.9"

[build-dependencies]
esp-config = { version = "0.6.0", features = ["build"] }

[features]
arc_buffers = []

log = ["defmt-or-log/log", "esp-wifi-hal/log"]
defmt = ["dep:defmt", "defmt-or-log/defmt", "esp-wifi-hal/defmt"]

esp32 = ["esp-hal/esp32", "esp-wifi-hal/esp32"]
esp32s2 = ["esp-hal/esp32s2", "esp-wifi-hal/esp32s2"]
