[package]
name = "foa_awdl"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = "0.1.1"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
ieee80211 = "0.5.4"
foa = { path = "../foa/" }
heapless = "0.8.0"
rand_core = "0.6.0"
defmt = { version = "0.3.10", optional = true }
awdl-frame-parser = { git = "https://github.com/Frostie314159/awdl-frame-parser.git" }
defmt-or-log = { version = "0.2.1", default-features = false }
esp-config = "0.3.1"

[build-dependencies]
esp-config = { version = "0.3.1", features = ["build"] }

[features]
defmt = ["dep:defmt", "defmt-or-log/defmt", "ieee80211/defmt", "foa/defmt"]
log = ["defmt-or-log/log"]


