[package]
name = "foa_awdl"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = "0.1.1"
embassy-sync = "0.7.0"
embassy-time = "0.4.0"
ieee80211 = "0.5.6"
foa = { path = "../foa/" }
heapless = "0.8.0"
rand_core = "0.9.3"
defmt = { version = "1.0.1", optional = true }
awdl-frame-parser = { git = "https://github.com/Frostie314159/awdl-frame-parser.git" }
defmt-or-log = { version = "0.2.1", default-features = false }
esp-config = "0.4.0"
embassy-net-driver-channel = "0.3.0"
llc-rs = "0.1.0"
ethernet = { version = "0.1.5", default-features = false }
ether-type = "0.1.3"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv6",
  "socket-raw",
] }

[build-dependencies]
esp-config = { version = "0.4.0", features = ["build"] }

[features]
alloc = []
esp32 = ["foa/esp32"]
esp32s2 = ["foa/esp32s2"]

defmt = ["dep:defmt", "defmt-or-log/defmt", "ieee80211/defmt", "foa/defmt"]
log = ["defmt-or-log/log"]

ndp-inject = []
default = ["ndp-inject"]
