[package]
name = "foa_awdl"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = "0.1.2"
embassy-sync = "0.7.0"
embassy-time = "0.5.0"
ieee80211 = "0.5.7"
foa = { path = "../foa/" }
heapless = "0.9.2"
rand_core = "0.9.3"
defmt = { version = "1.0.1", optional = true }
defmt-or-log = { version = "0.2.3", default-features = false }
esp-config = "0.6.1"
embassy-net-driver-channel = "0.3.2"
llc-rs = "0.1.3"
ethernet = { version = "0.1.6", default-features = false }
ether-type = "0.1.5"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "proto-ipv6",
  "socket-raw",
] }
awdl-frame-parser = "0.4.1"
log = { version = "0.4.28", optional = true }

[build-dependencies]
esp-config = { version = "0.4.0", features = ["build"] }

[features]
alloc = []
esp32 = ["foa/esp32"]
esp32s2 = ["foa/esp32s2"]

defmt = ["dep:defmt", "defmt-or-log/defmt", "ieee80211/defmt", "foa/defmt"]
log = ["dep:log", "foa/log", "defmt-or-log/log"]

ndp-inject = []
default = ["ndp-inject"]
